# snowsar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_jobs_table.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
docs/: api.md  developer.md  index.md
docs/algorithms/: dprse.md  lievens.md  ml.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  types.ts
models/: registry.json
snowsar/: __init__.py  cli.py  config.py  exceptions.py  types.py
snowsar/algorithms/: base.py  dprse.py  lievens.py  ml.py  registry.py
snowsar/api/: app.py  deps.py  results_store.py  schemas.py
snowsar/comparison/: __init__.py  plots.py  stats.py
snowsar/db/: __init__.py  models.py  session.py
snowsar/jobs/: __init__.py  executor.py  store.py  tasks.py  worker.py
snowsar/models/: features.py  registry.py  training.py
snowsar/output/: __init__.py  geotiff.py  netcdf.py  point_query.py  timeseries.py
snowsar/providers/: asf.py  base.py  fixture.py  gee.py  registry.py
snowsar/utils/: geo.py  raster.py  temporal.py
snowsar/validation/: ghcnd.py  matcher.py  metrics.py  snotel.py  user_upload.py
tests/: conftest.py  test_types.py  test_utils.py
tests/algorithms/: test_dprse.py  test_lievens.py  test_ml.py  test_registry.py
tests/api/: test_api.py  test_validation_route.py
tests/comparison/: conftest.py  test_plots.py  test_stats.py
tests/integration/: conftest.py  test_algorithm_registry.py  test_api_job_flow.py  test_end_to_end.py  test_output_formats.py  test_pipeline_dprse.py  test_pipeline_lievens.py  test_pipeline_ml.py  test_validation_api.py
tests/jobs/: test_executor.py
tests/models/: test_features.py  test_registry.py
tests/output/: conftest.py  test_geotiff.py  test_netcdf.py  test_point_query.py  test_timeseries.py
tests/providers/: test_base.py  test_fixture.py  test_gee.py  test_registry.py
tests/validation/: test_ghcnd.py  test_matcher.py  test_metrics.py  (+2 more)
(+25 files in other folders)
