[project]
name = "sar-snowpack"
version = "0.1.0"
description = "SAR-based snow depth retrieval system for Northern Hemisphere mountain environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
    "celery[redis]>=5.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "xarray>=2024.1",
    "numpy>=2.0",
    "dask>=2024.1",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "earthengine-api>=1.0",
    "asf-search>=7.0",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pooch>=1.8",
    "joblib>=1.3",
    "netCDF4>=1.6",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit",
]
## InSAR dependencies (isce3 must be installed via conda-forge: conda install -c conda-forge isce3)
insar = [
    "mintpy>=1.5",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
snowsar = "snowsar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snowsar"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "shapely.*",
    "rasterio.*",
    "rioxarray.*",
    "asf_search.*",
    "ee.*",
    "geopandas.*",
    "pandas.*",
    "plotly.*",
    "matplotlib.*",
    "sklearn.*",
    "xgboost.*",
    "joblib.*",
    "pooch.*",
    "netCDF4.*",
    "h5py.*",
    "celery.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
